fix(component): Reduce spacing between items to 16px from 24px
affects: ak-breadcrumbs

--- a/packages/ak-breadcrumbs/src/styles.less
+++ b/packages/ak-breadcrumbs/src/styles.less
@@ -1,6 +1,6 @@
 @import '~akutil-shared-styles/src/colors.less';
 
-@breadcrumbs-padding: 24px;
+@breadcrumbs-padding: 16px;
 
 .container {
   color: @ak-color-N300;
